# CS-ACV

./: .gitignore  README.md  pyproject.toml
models/: lidar_cnn.pt
src/: assignment01a.ipynb  assignment01b.ipynb
src/assignment02/: 01_dataset_exploration.ipynb  02_fusion_comparison.ipynb  README.md  utils.py
